--- a/microsservicos/email-ms/src/main/resources/application.properties
+++ b/microsservicos/email-ms/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=email
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms-email
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
