Config envio email (mailtrap)

--- a/microsservicos/email-ms/src/main/resources/application.properties
+++ b/microsservicos/email-ms/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=email
 
+# config banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms-email
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+# config envio email
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=755c9fad5fecc2
+spring.mail.password=67b9ca9ca9bb2b
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
