--- a/microsservicos/email-ms/src/main/resources/application.properties
+++ b/microsservicos/email-ms/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.mail.username=755c9fad5fecc2
 spring.mail.password=67b9ca9ca9bb2b
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# config broker rabbitMQ
+spring.rabbitmq.addresses=amqps://nsvlddbo:UpEd_NnhjTU78AhiN8MXmAmUIwC97R3F@beaver.rmq.cloudamqp.com/nsvlddbo
+spring.rabbitmq.queue=ms.email
