--- a/microsservicos/email-ms/src/main/resources/application.properties
+++ b/microsservicos/email-ms/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # config broker rabbitMQ
 spring.rabbitmq.addresses=amqps://nsvlddbo:UpEd_NnhjTU78AhiN8MXmAmUIwC97R3F@beaver.rmq.cloudamqp.com/nsvlddbo
 spring.rabbitmq.queue=ms.email
+
+# config nivel de logs
+logging.level.com.ms.email= TRACE
