--- a/microsservicos/erudio-microservice/api-rest-spring/pom.xml
+++ b/microsservicos/erudio-microservice/api-rest-spring/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.erudio</groupId>
-	<artifactId>api-rest-spring</artifactId>
+	<artifactId>api-rest-greeting</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api-rest-spring</name>
 	<description>Demo project for Spring Boot</description>
